[package]
name = "again"
version = "0.1.0"
authors = ["Matteo Nardi <matteo@matteonardi.org>"]
edition = "2021"
description = "A commands alias manager"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.10", features = ["derive"] }
clap_complete = "3.1.2"
colored = "2.0.0"
confy = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
tempfile = "3.3.0"
