[package]
name = "again"
version = "0.1.0"
authors = ["Matteo Nardi <matteo@matteonardi.org>"]
edition = "2021"
description = "A commands alias manager"

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.0.18", features = ["derive"] }
clap_complete = "4.0.3"
colored = "2.0.0"
confy = "0.5.1"
serde = { version = "1.0.137", features = ["derive"] }
tempfile = "3.3.0"
